Fix footer text spacing

--- a/static/css/footer.css
+++ b/static/css/footer.css
@@ -7,7 +7,7 @@ footer {
 
 #footer_info {
   display: inline-block;
-  margin: 0 5%;
+  margin: 0 auto;
   margin-top: 20px;
   vertical-align: top;
   color: white;
